<resources>
    <string name="app_name">DentLink</string>
    <string name="mobile_shell_placeholder">DentLink mobile shell. The Android widget is available from the home-screen widget picker.</string>
    <string name="mobile_email_hint">Email</string>
    <string name="mobile_password_hint">Password</string>
    <string name="mobile_sign_in_sync">Sign in and sync widget</string>
    <string name="mobile_sync_widget">Sync widget</string>
    <string name="mobile_syncing">Syncing DentLink...</string>
    <string name="mobile_sync_complete">Widget synced.</string>
    <string name="widget_refresh">Refresh</string>
    <string name="widget_create_note">Create note</string>
    <string name="widget_new_note_title">New note</string>
    <string name="widget_note_title_hint">Note title</string>
    <string name="widget_note_title_required">Title required</string>
    <string name="widget_save_note">Save note</string>
    <string name="widget_checkbox_empty">☐</string>
    <string name="widget_checkbox_checked">☑</string>
    <string name="widget_tab_calendar">Calendar</string>
    <string name="widget_tab_notes">Notes</string>
    <string name="widget_tab_emails">Emails</string>
    <string name="widget_tab_calendar_short">Cal</string>
    <string name="widget_tab_notes_short">Notes</string>
    <string name="widget_tab_emails_short">Mail</string>
    <string name="widget_empty_calendar">Open DentLink to sync calendar events.</string>
    <string name="widget_empty_notes">Open DentLink to sync notes.</string>
    <string name="widget_empty_emails">Open DentLink to sync emails.</string>
    <string name="widget_refresh_requested">Refresh requested</string>
    <string name="widget_synced_from_cache">Synced from DentLink</string>
    <string name="widget_last_sync">Last sync: %1$s</string>
    <string name="widget_not_synced">Not synced</string>
    <string name="widget_sync_error">Sync error</string>
</resources>
