<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/widget_header"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginStart="@dimen/widget_padding"
        android:layout_marginTop="@dimen/widget_padding"
        android:layout_marginEnd="@dimen/widget_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/widget_logo"
            android:layout_width="@dimen/widget_logo_width"
            android:layout_height="18dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/widget_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="end"
            android:singleLine="true"
            android:textColor="@color/dentlink_text_muted"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/widget_refresh"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/widget_refresh"
            android:paddingStart="8dp"
            android:paddingTop="7dp"
            android:paddingEnd="0dp"
            android:paddingBottom="7dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_refresh" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/widget_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/widget_padding"
        android:layout_marginTop="@dimen/widget_gap"
        android:layout_marginEnd="@dimen/widget_padding"
        android:layout_weight="1">

        <TextView
            android:id="@+id/widget_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/dentlink_text_secondary"
            android:textSize="13sp" />

        <ListView
            android:id="@+id/widget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:color/transparent"
            android:dividerHeight="3dp"
            android:scrollbarStyle="outsideOverlay" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/widget_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/widget_tab_calendar_v2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/widget_tab_unselected"
            android:contentDescription="@string/widget_tab_calendar">

            <ImageView
                android:id="@+id/widget_tab_calendar_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_nav_calendar" />

            <ImageView
                android:id="@+id/widget_tab_calendar_badge"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/widget_notification_dot"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/widget_tab_notes_v2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/widget_tab_unselected"
            android:contentDescription="@string/widget_tab_notes">

            <ImageView
                android:id="@+id/widget_tab_notes_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_nav_notes" />

            <ImageView
                android:id="@+id/widget_tab_notes_badge"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/widget_notification_dot"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/widget_tab_emails_v2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/widget_tab_unselected"
            android:contentDescription="@string/widget_tab_emails">

            <ImageView
                android:id="@+id/widget_tab_emails_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_nav_emails" />

            <ImageView
                android:id="@+id/widget_tab_emails_badge"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/widget_notification_dot"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/widget_create_note_zone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/widget_tab_unselected"
            android:contentDescription="@string/widget_create_note">

            <ImageView
                android:id="@+id/widget_create_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_plus" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
